# internal/models/facebook.go
@@ -1,0 +1,7 @@
+package models
+
+type Facebook struct {
+	Email string `json:"email" validate:"required,email"`
+	Name  string `json:"name" validate:"required"`
+	Token string `json:"token"`
+}
